--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
